src/test/compile-fail/restricted-keyword1.rs
// error-pattern:found `fail` in restricted position

fn main() {
    match true {
      {fail} { }
    }
}
